--- a/versionning.css
+++ b/versionning.css
@@ -1,7 +1,7 @@
-section{
+body{
   font-family: Lato light;
   text-align: justify;
-  }
+}
 
 .article1{
   display: flex;
@@ -21,6 +21,7 @@ section{
 .img2{
   width: 300px;
 }
+
 .section2{
   display: flex;
   flex-direction: row;
@@ -29,10 +30,25 @@ section{
 .article3{
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
+}
+
+h1{
+  display: flex;
+  justify-content: center;
 }
 
 .img3{
     width: 300px;
     height: 300px;
+}
+
+.section3{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.img4{
+  height: 20px;
 }
