--- a/versionning.css
+++ b/versionning.css
@@ -1,54 +1,63 @@
 body{
   font-family: Lato light;
   text-align: justify;
-}
-
-.article1{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-.article2{
-  display: flex;
-  flex-direction: row-reverse;
-  align-items: center;
+  --**-background-image: url(casque3.jpg);
+  --**-background-repeat: no-repeat;
 }
 
 .img{
-  width: 300px;
+  width: 42%;
 }
 
-.img2{
-  width: 300px;
+.img6{
+  width: 160px;
+  height: 40px;
+  margin-left: 2%;
+  margin-top: 2%;
+}
+
+.section1{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin-top: 3%;
+}
+
+.texte{
+  display: flex;
+  flex-direction: column;
+  width: 45%;
+  margin-left: 1%;
+  align-content: center;
+}
+
+.formulaire{
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  width: 55%;
+}
+
+.img7{
+  width: 200px;
+  margin-top: 2%;
+}
+
+h2{
+  font-size: 30px;
+  color: black;
+  padding: 0;
+  margin: 0;
+}
+
+p{
+  font-size: 20px;
+  color: black;
 }
 
 .section2{
   display: flex;
+  justify-content: flex-end;
   flex-direction: row;
-  justify-content: space-around;
-}
-.article3{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-h1{
-  display: flex;
-  justify-content: center;
-}
-
-.img3{
-    width: 300px;
-    height: 300px;
-}
-
-.section3{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-
-.img4{
-  height: 20px;
+  width: 42%
 }
