--- a/versionning.css
+++ b/versionning.css
@@ -19,8 +19,7 @@ p{
 
 @keyframes monAnim2 {
   from { opacity: 0;
-
-        transform:translate(10px, 0);}
+        transform:rotate(360deg);}
   35% { opacity: 1; }
   to {  opacity: 1; }
 }
@@ -28,7 +27,7 @@ p{
 .img7{
   width: 150px;
   margin-top: 2%;
-  animation: monAnim2 10s linear 1s;
+  animation: monAnim2 5s linear 1s;
 }
 
 .nom:hover{
@@ -37,7 +36,6 @@ p{
 
 .icone{
   width: 20px;
-  display: inline-block;
 }
 span{
   font-weight: bold;
@@ -59,17 +57,15 @@ span{
 
 @keyframes monAnim {
   from { opacity: 0;
-        background-color: white;
         transform:translate(10px, 0);}
-  35% { opacity: 1;
-        background-color: lightgreen; }
-  to {  opacity: 1;
-        background-color: green; }
+  35% { opacity: 0.5; }
+  to {  opacity: 1; }
 }
 
 .icone{
   opacity: 0;
-  animation: monAnim 10s linear 1s;
+  vertical-align: middle;
+  animation: monAnim 10s linear 5s;
 }
 
 h2{
@@ -79,6 +75,30 @@ h2{
 
 article{
   margin-left: 3%;
+}
+
+@keyframes monAnim3 {
+  from { opacity: 0;
+      transform-origin: 0 0;
+        transform:translate(-300px, 0);}
+  35% { opacity: 0; }
+  to {  opacity: 1; }
+}
+
+.fleche{
+  height: 20px;
+  vertical-align: middle;
+  animation: monAnim3 5s linear 12s;
+}
+
+.partenaire{
+  height: 20px;
+}
+
+.section2{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 @media (max-width: 600px){
@@ -92,7 +112,7 @@ article{
     margin-left: 2%;
   }
   p{
-    font-size: 24px;
+    font-size: 20px;
   }
   body{
     background-color:#f2eff1;
